# varco

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODING_STANDARD.md  README.md  pyproject.toml
example/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
example/example/: __init__.py  app.py  assembler.py  auth.py  authorizer.py  connections.py  consumer.py  di.py  dtos.py  events.py  models.py  router.py  service.py  streams.py
fastrest_beanie/: README.md  pyproject.toml
fastrest_beanie/fastrest_beanie/: __init__.py  bootstrap.py  di.py  factory.py  provider.py  repository.py  uow.py
fastrest_beanie/tests/: conftest.py  test_beanie_compiler.py  test_beanie_di.py  test_beanie_factory.py  test_beanie_provider.py  test_beanie_repository.py  test_beanie_tenant.py  test_beanie_uow.py
fastrest_core/: README.md  pyproject.toml
fastrest_core/fastrest_core/: __init__.py  assembler.py  auth.py  base_authorizer.py  dto.py  mapper.py  meta.py  migrator.py  model.py  providers.py  registry.py  repository.py  service.py  tenant.py  tracing.py
fastrest_core/tests/: test_auth.py  test_base_authorizer.py  test_dto.py  test_dto_factory.py  test_jwk.py  test_jwt.py  test_mapper.py  test_meta.py  test_migrator.py  test_model.py  test_query_builder.py  test_query_optimizer.py  test_query_parser.py  test_query_types.py  test_query_visitor.py  test_registry.py  test_service.py  test_tenant.py  test_trusted_issuer_registry.py
fastrest_sa/: README.md  pyproject.toml
fastrest_sa/fastrest_sa/: __init__.py  alembic_helpers.py  bootstrap.py  factory.py  models.py  provider.py  repository.py  schema_guard.py  type_coercion.py  uow.py
fastrest_sa/tests/: conftest.py  test_sa_applicator.py  test_sa_compiler.py  test_sa_factory.py  test_sa_models.py  test_sa_provider.py  test_sa_repository.py  test_sa_session.py  test_sa_tenant.py  test_sa_uow.py  test_schema_guard.py  test_type_coercion.py
varco_beanie/: README.md  pyproject.toml
varco_beanie/tests/: conftest.py  test_beanie_aggregation.py  test_beanie_compiler.py  test_beanie_di.py  test_beanie_encryption_store.py  test_beanie_factory.py  test_beanie_health.py  test_beanie_integration.py  test_beanie_job_store.py  test_beanie_outbox.py  test_beanie_provider.py  test_beanie_repository.py  test_beanie_saga.py  test_beanie_tenant.py  test_beanie_uow.py  test_index_guard.py
varco_beanie/varco_beanie/: __init__.py  audit.py  bootstrap.py  config.py  di.py  encryption_store.py  factory.py  health.py  inbox.py  index_guard.py  job_store.py  outbox.py  provider.py  repository.py  saga.py  uow.py
varco_core/: README.md  pyproject.toml
varco_core/tests/: test_aggregation.py  test_audit.py  test_auth.py  test_base_authorizer.py  test_bulk_repository.py  test_bulk_service.py  test_bulkhead.py  test_cache.py  test_cache_warming.py  test_connection.py  test_conversation_store.py  test_deduplication.py  test_dlq.py  test_dto.py  test_dto_encryption.py  test_dto_factory.py  test_encryption_store.py  test_event.py  test_health.py  test_hedge.py  test_inbox.py  test_jwk.py  test_jwk_enc.py  test_jwt.py  test_lock.py  test_mapper.py  test_meta.py  test_migrator.py  test_migrator_v2.py  test_model.py  test_observability.py  test_outbox.py  test_query_builder.py  test_query_optimizer.py  test_query_parser.py  test_query_types.py  test_query_visitor.py  test_rate_limit.py  test_registry.py  test_resilience.py  (+10 more)
varco_core/varco_core/: __init__.py  assembler.py  config.py  encryption.py  encryption_store.py  health.py  lock.py  mapper.py  meta.py  migrator.py  model.py  providers.py  registry.py  repository.py  serialization.py  tracing.py  uow.py  validation.py
varco_fastapi/: README.md  pyproject.toml
varco_fastapi/tests/: test_http_connection.py
varco_fastapi/varco_fastapi/: __init__.py  app.py  connection.py  context.py  di.py  exceptions.py  lifespan.py  validation.py
varco_kafka/: README.md  pyproject.toml
varco_kafka/tests/: test_kafka_bus.py  test_kafka_channel.py  test_kafka_channel_integration.py  test_kafka_connection.py  test_kafka_dlq.py  test_kafka_eos.py  test_kafka_health.py  test_kafka_integration.py
varco_kafka/varco_kafka/: __init__.py  bus.py  channel.py  config.py  connection.py  di.py  dlq.py  health.py
varco_memcached/: README.md  pyproject.toml
varco_memcached/tests/: test_cache.py  test_health.py  test_integration.py
varco_memcached/varco_memcached/: __init__.py  cache.py  health.py
varco_redis/: README.md  pyproject.toml
varco_redis/tests/: test_layered_cache_di.py  test_redis_bus.py  test_redis_cache.py  test_redis_cache_integration.py  test_redis_channel.py  test_redis_connection.py  test_redis_conversation.py  test_redis_dlq.py  test_redis_dlq_integration.py  test_redis_encryption_store.py  test_redis_health.py  test_redis_integration.py  test_redis_job_store.py  test_redis_lock_integration.py  test_redis_rate_limit_integration.py  test_redis_streams_dlq.py
varco_redis/varco_redis/: __init__.py  bus.py  cache.py  channel.py  config.py  connection.py  conversation.py  deduplication.py  di.py  dlq.py  encryption_store.py  health.py  job_store.py  lock.py  rate_limit.py  streams.py
varco_sa/: README.md  pyproject.toml
varco_sa/tests/: conftest.py  test_pool_metrics.py  test_sa_advisory_lock.py  test_sa_applicator.py  test_sa_compiler.py  test_sa_connection.py  test_sa_conversation.py  test_sa_encryption_store.py  test_sa_factory.py  test_sa_health.py  test_sa_inbox.py  test_sa_job_store.py  test_sa_models.py  test_sa_outbox.py  test_sa_provider.py  test_sa_relationships.py  test_sa_repository.py  test_sa_saga.py  test_sa_session.py  test_sa_tenant.py  test_sa_uow.py  test_schema_guard.py  test_type_coercion.py
varco_sa/varco_sa/: __init__.py  advisory_lock.py  alembic_helpers.py  audit.py  bootstrap.py  config.py  connection.py  conversation.py  di.py  encryption_store.py  factory.py  health.py  inbox.py  job_store.py  models.py  outbox.py  pool_metrics.py  provider.py  repository.py  saga.py  schema_guard.py  uow.py  (+2 more)
varco_ws/: pyproject.toml
(+279 files in other folders)
