[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "fastrest-beanie"
version     = "0.1.0"
description = "Beanie (Motor / MongoDB) async backend for fastrest"
readme      = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastrest-core>=0.1.0",
    "beanie>=1.24",
    "motor>=3.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["fastrest_beanie"]
