[tool.poetry]
name        = "fastrest-beanie"
version     = "0.1.0"
description = "Beanie (Motor / MongoDB) async backend for fastrest"
authors     = ["edoardo.scarpaci <edoardo.scarpaci@gmail.com>"]
readme      = "README.md"
packages    = [{include = "fastrest_beanie"}]

[tool.poetry.dependencies]
python        = ">=3.12,<4.0"
# Path dependency — installs fastrest_core in editable mode from the monorepo.
fastrest-core = {path = "../fastrest_core", develop = true}
beanie        = ">=1.24"
motor         = ">=3.3"

[tool.poetry.group.dev.dependencies]
pytest         = ">=8.0"
pytest-asyncio = ">=0.24"
pymongo        = ">=4.0"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
