[tool.poetry]
name        = "fastrest-core"
version     = "0.1.0"
description = "Core domain abstractions for fastrest (models, mapper, meta, query)"
authors     = ["edoardo.scarpaci <edoardo.scarpaci@gmail.com>"]
readme      = "README.md"
packages    = [{include = "fastrest_core"}]

[tool.poetry.dependencies]
python   = ">=3.12"
pydantic = ">=2.12.5,<3.0.0"
providify = ">=0.1.4a0"
# lark is used by QueryParser — runtime dependency, not dev-only
lark     = ">=1.1"

[tool.poetry.group.dev.dependencies]
pytest       = ">=8.0"
pytest-asyncio = ">=0.24"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
