[tool.poetry]
name        = "fastrest-sa"
version     = "0.1.0"
description = "SQLAlchemy async backend for fastrest"
authors     = ["edoardo.scarpaci <edoardo.scarpaci@gmail.com>"]
readme      = "README.md"
packages    = [{include = "fastrest_sa"}]

[tool.poetry.dependencies]
python        = ">=3.12"
# Path dependency — installs fastrest_core in editable mode from the monorepo.
# Changes to fastrest_core are immediately visible without reinstalling.
fastrest-core = {path = "../fastrest_core", develop = true}
sqlalchemy    = {version = ">=2.0", extras = ["asyncio"]}

[tool.poetry.group.postgresql.dependencies]
# Install with: poetry install --with postgresql
asyncpg = ">=0.29"

[tool.poetry.group.dev.dependencies]
# aiosqlite is included here (not just sqlite group) so tests run without
# needing a separate --with sqlite flag during local development.
pytest         = ">=8.0"
pytest-asyncio = ">=0.24"
aiosqlite      = ">=0.20"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
