[tool.poetry]
name          = "varco-beanie"
version       = "0.0.1"
description   = "Beanie (Motor / MongoDB) async backend for varco — runtime ORM generation, repository, and UoW"
authors       = ["edoardo.scarpaci <edoardo.scarpaci@gmail.com>"]
readme        = "README.md"
license       = "Apache-2.0"
homepage      = "https://github.com/edoardoscarpaci/varco"
repository    = "https://github.com/edoardoscarpaci/varco"
documentation = "https://github.com/edoardoscarpaci/varco#beanie-backend"
keywords      = ["fastapi", "beanie", "motor", "mongodb", "async", "domain-model", "repository", "odm"]
classifiers   = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Database",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
packages      = [{include = "varco_beanie"}]

[tool.poetry.dependencies]
python        = ">=3.12,<4.0"
# Path dependency — installs varco_core in editable mode from the monorepo.
varco-core = {path = "../varco_core", develop = true}
beanie        = ">=1.24"
motor         = ">=3.3"
# Explicit direct dependency for varco_beanie.di — providify is already
# a transitive dep via varco-core but listing it here makes the di module's
# imports explicit and protects against future varco-core decoupling.
providify     = ">=0.1.4a3"

[tool.poetry.group.dev.dependencies]
pytest         = ">=8.0"
pytest-asyncio = ">=0.24"
pymongo        = ">=4.0"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0", "poetry-monorepo-dependency-plugin"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
