[project]
name          = "varco-beanie"
version       = "0.0.2"
description   = "Beanie (Motor / MongoDB) async backend for varco — runtime ORM generation, repository, and UoW"
authors       = [{ name = "edoardo.scarpaci", email = "edoardo.scarpaci@gmail.com" }]
readme        = "README.md"
license       = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords      = ["fastapi", "beanie", "motor", "mongodb", "async", "domain-model", "repository", "odm"]
classifiers   = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Database",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    # Workspace sibling — resolved from the monorepo via [tool.uv.sources] below.
    "varco-core",
    # beanie 2.x dropped motor and uses pymongo>=4.11 async client directly.
    # We target beanie>=2.0 to track the latest stable series.
    "beanie>=2.0",
    # pymongo>=4.11 provides AsyncMongoClient (native async without motor).
    # beanie 2.x already requires pymongo>=4.11, so this pin is explicit
    # to signal the dependency clearly in our own package metadata.
    "pymongo>=4.11",
    # Explicit direct dependency for varco_beanie.di — providify is already
    # a transitive dep via varco-core but listing it here makes the di module's
    # imports explicit and protects against future varco-core decoupling.
    "providify>=0.1.4a3",
]

[project.urls]
Homepage   = "https://github.com/edoardoscarpaci/varco"
Repository = "https://github.com/edoardoscarpaci/varco/tree/main/varco_beanie"
Issues     = "https://github.com/edoardoscarpaci/varco/issues"

[tool.uv.sources]
varco-core = { workspace = true }



[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pymongo>=4.0",
    # testcontainers[mongodb] spins up a real MongoDB instance via Docker for
    # integration tests.  Marked with @pytest.mark.integration and skipped
    # by default — run with: pytest -m integration
    "testcontainers[mongodb]>=4.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["varco_beanie"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
markers      = [
    "integration: real MongoDB instance required (disabled by default — use -m integration)",
]
