[tool.poetry]
name          = "varco-core"
version       = "0.0.2"
description   = "Backend-agnostic domain model, service layer, authorization, query AST and DTOs for varco"
authors       = ["edoardo.scarpaci <edoardo.scarpaci@gmail.com>"]
readme        = "README.md"
license       = "Apache-2.0"
homepage      = "https://github.com/edoardoscarpaci/varco"
repository    = "https://github.com/edoardoscarpaci/varco"
documentation = "https://github.com/edoardoscarpaci/varco#readme"
keywords      = ["fastapi", "domain-model", "service-layer", "async", "rest-api", "orm-agnostic", "query-builder", "jwt", "authorization"]
classifiers   = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Database",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
packages      = [{include = "varco_core"}]

[tool.poetry.dependencies]
python   = ">=3.12"
pydantic = ">=2.12.5,<3.0.0"
providify = ">=0.1.4a3"
# lark is used by QueryParser — runtime dependency, not dev-only
lark     = ">=1.1"
# PyJWT is used by varco_core.jwt for encoding/decoding JWT tokens
PyJWT         = ">=2.8,<3.0"
# cryptography is used by varco_core.jwk for RSA/EC key operations
cryptography  = ">=41.0"

[tool.poetry.group.dev.dependencies]
pytest       = ">=8.0"
pytest-asyncio = ">=0.24"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
