[project]
name          = "varco-core"
version       = "0.0.4"
description   = "Backend-agnostic domain model, service layer, authorization, query AST and DTOs for varco"
authors       = [{ name = "edoardo.scarpaci", email = "edoardo.scarpaci@gmail.com" }]
readme        = "README.md"
license       = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords      = ["fastapi", "domain-model", "service-layer", "async", "rest-api", "orm-agnostic", "query-builder", "jwt", "authorization"]
classifiers   = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Database",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "providify>=0.1.4a3",
    # lark is used by QueryParser — runtime dependency, not dev-only
    "lark>=1.1",
    # PyJWT is used by varco_core.jwt for encoding/decoding JWT tokens
    "PyJWT>=2.8,<3.0",
    # cryptography is used by varco_core.jwk for RSA/EC key operations
    "cryptography>=41.0",
]

[project.urls]
Homepage   = "https://github.com/edoardoscarpaci/varco"
Repository = "https://github.com/edoardoscarpaci/varco/tree/main/varco_core"
Issues     = "https://github.com/edoardoscarpaci/varco/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["varco_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
