[project]
name          = "varco-kafka"
version       = "0.0.2"
description   = "Apache Kafka event bus backend for varco — KafkaEventBus built on aiokafka"
authors       = [{ name = "edoardo.scarpaci", email = "edoardo.scarpaci@gmail.com" }]
readme        = "README.md"
license       = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords      = ["fastapi", "kafka", "aiokafka", "async", "event-bus", "domain-events", "varco"]
classifiers   = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    # Workspace sibling — resolved from the monorepo via [tool.uv.sources] below.
    "varco-core",
    # aiokafka is the async Kafka client used by KafkaEventBus.
    "aiokafka>=0.11",
    # providify is used directly for @Singleton / @PreDestroy on KafkaEventBus
    # and for @Configuration / @Provider in varco_kafka.di.
    # It is already a transitive dep via varco-core but listed here to make the
    # direct usage explicit and to protect against future varco-core decoupling.
    "providify>=0.1.4a3",
    # pydantic-settings is used directly in varco_kafka.config for SettingsConfigDict.
    # It is also a transitive dep via varco-core, but listed explicitly here.
    "pydantic-settings>=2.0",
]

[project.urls]
Homepage   = "https://github.com/edoardoscarpaci/varco"
Repository = "https://github.com/edoardoscarpaci/varco/tree/main/varco_kafka"
Issues     = "https://github.com/edoardoscarpaci/varco/issues"

[tool.uv.sources]
# Resolve varco-core from the workspace instead of PyPI so editable
# changes are immediately visible without a reinstall.
varco-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    # testcontainers[kafka] spins up a real Kafka broker via Docker for
    # integration tests.  Marked with @pytest.mark.integration and skipped
    # by default — run with: pytest -m integration
    "testcontainers[kafka]>=4.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["varco_kafka"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
markers      = [
    "integration: real Kafka broker required (disabled by default — use -m integration)",
]
