[tool.poetry]
name        = "varco-sa"
version     = "0.1.0"
description = "SQLAlchemy async backend for varco"
authors     = ["edoardo.scarpaci <edoardo.scarpaci@gmail.com>"]
readme      = "README.md"
packages    = [{include = "varco_sa"}]

[tool.poetry.dependencies]
python        = ">=3.12"
# Path dependency — installs varco_core in editable mode from the monorepo.
# Changes to varco_core are immediately visible without reinstalling.
varco-core = {path = "../varco_core", develop = true}
sqlalchemy    = {version = ">=2.0", extras = ["asyncio"]}

[tool.poetry.group.postgresql.dependencies]
# Install with: poetry install --with postgresql
asyncpg = ">=0.29"

[tool.poetry.group.dev.dependencies]
# aiosqlite is included here (not just sqlite group) so tests run without
# needing a separate --with sqlite flag during local development.
pytest         = ">=8.0"
pytest-asyncio = ">=0.24"
aiosqlite      = ">=0.20"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
