[project]
name          = "varco-sa"
version       = "1.0.6"
description   = "SQLAlchemy async backend for varco — runtime ORM generation, repository, schema guard, and Alembic helpers"
authors       = [{ name = "edoardo.scarpaci", email = "edoardo.scarpaci@gmail.com" }]
readme        = "README.md"
license       = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords      = ["fastapi", "sqlalchemy", "async", "domain-model", "repository", "alembic", "orm", "schema-guard"]
classifiers   = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Database",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    # Workspace sibling — resolved from the monorepo via [tool.uv.sources] below.
    "varco-core",
    "sqlalchemy[asyncio]>=2.0",
    "providify>=0.1.6",
]

[project.urls]
Homepage   = "https://github.com/edoardoscarpaci/varco"
Repository = "https://github.com/edoardoscarpaci/varco/tree/main/varco_sa"
Issues     = "https://github.com/edoardoscarpaci/varco/issues"

[tool.uv.sources]
varco-core = { workspace = true }

[project.optional-dependencies]
# Install with: uv sync --extra postgresql
postgresql = ["asyncpg>=0.29"]

[dependency-groups]
dev = [
    # aiosqlite is included here (not just sqlite group) so tests run without
    # needing a separate --extra flag during local development.
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["varco_sa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
